[project]
name = "Tools"
version = "75.0"
description = "A set of utility actions for data manipulation and common platform tasks to power up playbook capabilities."
requires-python = ">=3.11,<3.12"
dependencies = [
    "croniter==6.0.0",
    "dnspython==2.7.0",
    "environmentcommon",
    "nltk==3.9.1",
    "psycopg2-binary==2.9.10",
    "pyopenssl>=24.3.0",
    "pyspellchecker==0.8.2",
    "requests>=2.32.3",
    "tipcommon",
    "tldextract==5.1.3",
]

[dependency-groups]
dev = [
    "environmentcommon",
    "integration-testing",
    "pytest-json-report>=1.5.0",
    "pytest>=8.3.5",
    "soar-sdk",
]

[tool.uv.sources]
environmentcommon = { path = "../../../../packages/envcommon/whls/EnvironmentCommon-1.0.3-py3-none-any.whl" }
integration-testing = { path = "../../../../packages/integration_testing_whls/integration_testing-2.3.0-py3-none-any.whl" }
soar-sdk = { git = "https://github.com/chronicle/soar-sdk.git" }
tipcommon = { path = "../../../../packages/tipcommon/whls/TIPCommon-2.3.0-py3-none-any.whl" }

[[tool.uv.index]]
url = "https://pypi.org/simple"
default = true
